--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,15 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+boto3==1.9.98
+botocore==1.12.98         # via boto3, s3transfer
 datetime==4.3
+docutils==0.14            # via botocore
+jmespath==0.9.3           # via boto3, botocore
 psycopg2==2.7.7
+python-dateutil==2.8.0    # via botocore
 pytz==2018.9              # via datetime
+s3transfer==0.2.0         # via boto3
+six==1.12.0               # via python-dateutil
+urllib3==1.24.1           # via botocore
 zope.interface==4.6.0     # via datetime
