--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,19 @@
 #
 boto3==1.9.98
 botocore==1.12.98         # via boto3, s3transfer
+certifi==2018.11.29       # via requests
+chardet==3.0.4            # via requests
+codecov==2.0.15
+coverage==4.5.2           # via codecov
 datetime==4.3
 docutils==0.14            # via botocore
+idna==2.8                 # via requests
 jmespath==0.9.3           # via boto3, botocore
 psycopg2==2.7.7
 python-dateutil==2.8.0    # via botocore
 pytz==2018.9              # via datetime
+requests==2.21.0          # via codecov
 s3transfer==0.2.0         # via boto3
 six==1.12.0               # via python-dateutil
-urllib3==1.24.1           # via botocore
+urllib3==1.24.1           # via botocore, requests
 zope.interface==4.6.0     # via datetime
