Added graph functions for EPV report

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -82,6 +82,8 @@ objects:
                   value: ${NPM_TRAINING_REPO}
                 - name: PYPI_TRAINING_REPO
                   value: ${PYPI_TRAINING_REPO}
+                - name: GREMLIN_QUERY_SIZE
+                  value: ${GREMLIN_QUERY_SIZE}
               resources:
                 requests:
                   memory: ${MEMORY_REQUEST}
