--- a/Dockerfile.rhel
+++ b/Dockerfile.rhel
@@ -2,13 +2,16 @@
 
 FROM quay.io/openshiftio/rhel-base-python3:latest
   
-ENV APP_DIR='/f8a_report'
+ENV APP_DIR='/f8a_report' \
+    F8A_UTIL_VERSION=d7aaccf
 
 WORKDIR ${APP_DIR}
 
 RUN mkdir -p ${APP_DIR}
 
 RUN pip3 install --upgrade pip
+RUN pip3 install git+https://github.com/fabric8-analytics/fabric8-analytics-utils.git@${F8A_UTIL_VERSION}
+RUN pip3 install git+https://git@github.com/fabric8-analytics/fabric8-analytics-version-comparator.git#egg=f8a_version_comparator
 
 COPY f8a_report/ ${APP_DIR}/f8a_report
 COPY requirements.txt ${APP_DIR}
