--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -68,6 +68,11 @@ objects:
                     secretKeyRef:
                       key: username
                       name: coreapi-postgres
+                - name: SENTRY_AUTH_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      name: worker
+                      key: sentry-auth-token
                 - name: REPORT_BUCKET_NAME
                   value: developer-analytics-audit-report
                 - name: NPM_MODEL_BUCKET
