--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -16,7 +16,7 @@ objects:
   spec:
     successfulJobsHistoryLimit: 4
     failedJobsHistoryLimit: 0
-    concurrencyPolicy: "Replace"
+    concurrencyPolicy: "Forbid"
     schedule: "${CRON_SCHEDULE}"
     jobTemplate:
       spec:
