--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,9 @@ jmespath==0.9.3           # via boto3, botocore
 psycopg2==2.7.7
 python-dateutil==2.8.0    # via botocore
 pytz==2018.9              # via datetime
-requests==2.21.0          # via codecov
+requests-futures==0.9.9
+requests==2.21.0          # via codecov, requests-futures
 s3transfer==0.2.0         # via boto3
 six==1.12.0               # via python-dateutil
 urllib3==1.24.1           # via botocore, requests
 zope.interface==4.6.0     # via datetime
-responses==0.10.6
