--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-boto3==1.9.98
-botocore==1.12.98         # via boto3, s3transfer
+boto==2.49.0
+boto3==1.9.181  
+botocore==1.12.181         # via boto3, s3transfer
 certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
 codecov==2.0.15
@@ -14,6 +15,7 @@ datetime==4.3
 docutils==0.14            # via botocore
 idna==2.8                 # via requests
 jmespath==0.9.3           # via boto3, botocore
+moto==1.3.9 
 psycopg2==2.7.7
 python-dateutil==2.8.0    # via botocore
 pytz==2018.9              # via datetime
