--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -191,7 +191,7 @@ parameters:
   displayName: Schedule
   required: true
   name: CRON_SCHEDULE
-  value: "0 */3 * * *"
+  value: "0 0 * * *"
 
 - description: CPU request
   displayName: CPU request
