Using env_var 'SENTRY_URL' to create 'sentry_api_issues' and 'sentry_api_tags' wrt stage and prod sentry

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -132,6 +132,11 @@ objects:
                     secretKeyRef:
                       name: worker
                       key: sentry-auth-token
+                - name: SENTRY_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: worker
+                      key: sentry-url
                 - name: REPORT_BUCKET_NAME
                   valueFrom:
                     secretKeyRef:
