--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ markupsafe==1.1.1         # via jinja2
 mock==4.0.2               # via moto
 moto==1.3.14              # via -r requirements.in
 networkx==2.4             # via cfn-lint
-psycopg2==2.7.7           # via -r requirements.in
+psycopg2-binary==2.8.5    # via -r requirements.in
 pyasn1==0.4.8             # via python-jose, rsa
 pycparser==2.20           # via cffi
 pyrsistent==0.16.0        # via jsonschema
