[FEATURE]: Trigger ingestion flow from reports for packages missing latest versions. (#164)
* [APPAI-1466] Integrating ingestin API with reports for ingesting packages which are missing any version fron DB.

* [APPAI-1466] PyLint fix

* [APPAI-1466] Modified setup.py and resolved conflicts.

* [APPAI-1466] Created helper for ingestion process.

* [APPAI-1466] Test case fix.

* [APPAI-1466] Test case for ingestion functions

* [APPAI-1466] Updating ingestion API end point.

* [APPAI-1466] Updated request data format as it's been changed in API.

* [APPAI-1466] Updated removed code while pulling from upstream.

* [APPAI-1466] Updateding dependencies for tests.

* [APPAI-1466] Used tenacity for retry loop while calling jobs API.

--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,11 @@
+requests
+Werkzeug
 psycopg2-binary
-datetime
-boto3
-codecov
-requests-futures
+botocore<=1.15.35
 freezegun
-moto
+responses
+boto3<=1.12.35
+moto<=1.3.14
+boto<=2.49.0
+tenacity
+f8a_utils @ git+https://github.com/fabric8-analytics/fabric8-analytics-utils.git@e220735#egg=f8a_utils
