Revert "adding build scripts for app-sre migration (#197)" (#201)
This reverts commit 6f5a6b9ae8e8027b6d9ea867f81fcc570a0f1cf1.

--- a/Dockerfile.rhel
+++ b/Dockerfile.rhel
@@ -1,13 +1,12 @@
-FROM registry.centos.org/centos/centos:7
+# base image source https://github.com/rhdt/EL-Dockerfiles/blob/master/base/python3/Dockerfile
+
+FROM quay.io/openshiftio/rhel-base-python3:latest
   
 ENV APP_DIR='/f8a_report'
 
 WORKDIR ${APP_DIR}
 
-RUN yum install -y epel-release &&\
-    yum install -y gcc git python36-pip python36-devel &&\
-    yum clean all &&\
-    mkdir -p ${APP_DIR}
+RUN mkdir -p ${APP_DIR}
 
 RUN pip3 install --upgrade pip
 
